RESOLVED FIXED118912
[iOS] captions sometimes positioned incorrectly after fullscreen state change
https://bugs.webkit.org/show_bug.cgi?id=118912
Summary [iOS] captions sometimes positioned incorrectly after fullscreen state change
Eric Carlson
Reported 2013-07-19 11:19:39 PDT
Caption position/size is sometimes not updated when the <video> element enters or exits fullscreen.
Attachments
Proposed patch. (4.85 KB, patch)
2013-07-22 06:14 PDT, Eric Carlson
webkit-ews: commit-queue-
Updated patch (deleted)
2013-07-22 07:28 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2013-07-22 06:14:56 PDT
Created attachment 207243 [details] Proposed patch.
Early Warning System Bot
Comment 2 2013-07-22 06:20:17 PDT
Comment on attachment 207243 [details] Proposed patch. Attachment 207243 [details] did not pass qt-wk2-ews (qt-wk2): Output: http://webkit-queues.appspot.com/results/1189075
Early Warning System Bot
Comment 3 2013-07-22 06:20:31 PDT
Eric Carlson
Comment 4 2013-07-22 06:57:17 PDT
(In reply to comment #3) > (From update of attachment 207243 [details]) > Attachment 207243 [details] did not pass qt-ews (qt): > Output: http://webkit-queues.appspot.com/results/1082531 Why does the Qt port include MediaControlsApple.cpp? /home/webkit/WebKit/Source/WebCore/html/shadow/MediaControlsApple.cpp: In member function 'virtual void WebCore::MediaControlsApple::enteredFullscreen()': /home/webkit/WebKit/Source/WebCore/html/shadow/MediaControlsApple.cpp:456:9: error: 'm_textDisplayContainer' was not declared in this scope /home/webkit/WebKit/Source/WebCore/html/shadow/MediaControlsApple.cpp: In member function 'virtual void WebCore::MediaControlsApple::exitedFullscreen()': /home/webkit/WebKit/Source/WebCore/html/shadow/MediaControlsApple.cpp:474:9: error: 'm_textDisplayContainer' was not declared in this scope
Jer Noble
Comment 5 2013-07-22 07:11:44 PDT
Comment on attachment 207243 [details] Proposed patch. Rather than manually calling updateDisplay() when the style changes, we may want to call it from RenderTextTrackContainer::paint(), so all style changes resulting in a paint get flushed to the representation.
Eric Carlson
Comment 6 2013-07-22 07:28:07 PDT
Created attachment 207245 [details] Updated patch
WebKit Commit Bot
Comment 7 2013-07-22 09:25:29 PDT
Comment on attachment 207245 [details] Updated patch Clearing flags on attachment: 207245 Committed r152975: <http://trac.webkit.org/changeset/152975>
WebKit Commit Bot
Comment 8 2013-07-22 09:25:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.