Source/WebCore/html/shadow/MediaControlElements.h
@@ -445,6 +445,8 @@ public:
 
     void updateDisplay();
     void updateSizes(bool forceUpdate = false);
+    void enteredFullscreen();
+    void exitedFullscreen();
     static const AtomicString& textTrackContainerElementShadowPseudoId();
 
 private:
@@ -457,6 +459,7 @@ private:
 
     virtual PassRefPtr<Image> createTextTrackRepresentationImage() OVERRIDE;
     virtual void textTrackRepresentationBoundsChanged(const IntRect&) OVERRIDE;
+    void clearTextTrackRepresentation();
     OwnPtr<TextTrackRepresentation> m_textTrackRepresentation;
 
     Timer<MediaControlTextTrackContainerElement> m_updateTimer;
